[tool.poetry]
name = "idz3-fastapi"
version = "0.1.0"
description = ""
authors = ["Denisasu <super.lopushanskiy@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
pytest = "^7.4.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
